--- a/infra/local/opensearch/docker-compose.yml
+++ b/infra/local/opensearch/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   opensearch:
     image: opensearchproject/opensearch:2.11.1
@@ -30,6 +28,7 @@ services:
     container_name: opensearch-dashboards-dev
     environment:
       - OPENSEARCH_HOSTS=["http://opensearch:9200"]
+      - DISABLE_SECURITY_DASHBOARDS_PLUGIN=true
     ports:
       - "5601:5601"
     depends_on:
