--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -73,9 +73,7 @@ filter {
     # IP 지역 정보 (선택적)
     if [clientip] {
       mutate {
-        add_field => { "source_ip" => "%{clientip}" 
-								        "target" => "%{geoip} }
-      }
+        add_field => { "source_ip" => "%{clientip}" }
     }
   }
   
