--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -1,29 +1,22 @@
 #==============================================================================
-# 2SeC SIEM Logstash Pipeline Configuration
+# 2SeC SIEM Logstash Pipeline Configuration  
 # Kinesis Data Stream → Processing → OpenSearch
 #==============================================================================
 
 input {
   kinesis {
-    # Kinesis Stream 설정 (기존 kinesis.tf 정보 활용)
     kinesis_stream_name => "${KINESIS_STREAM_NAME}"
     region => "${AWS_REGION}"
-    
-    # Consumer 설정
-    application_name => "${PROJECT_NAME}-logstash-consumer"
+    application_name => "${PROJECT_NAME}-logstash-consumer"  # ✅ 환경변수 사용
     initial_position => "TRIM_HORIZON"
-    
-    # 성능 튜닝
     checkpoint_interval => 10
     metrics => "cloudwatch"
     
-    # 코덱 설정 (JSON 로그 처리)
     codec => json {
       charset => "UTF-8"
     }
     
-    # 태깅
-    add_tag => ["kinesis", "${PROJECT_NAME}", "raw"]
+    add_tag => ["kinesis", "${PROJECT_NAME}", "raw"]  # ✅ 환경변수 사용
   }
 }
 
@@ -31,13 +24,13 @@ filter {
   #---------------------------------------------------------------------------
   # 1. 기본 필드 정리
   #---------------------------------------------------------------------------
-  
-  # Kinesis 메타데이터 정리
   mutate {
     remove_field => ["@version"]
     add_field => {
-	      "pipeline" => "${PROJECT_NAME}-logstash"
+      "pipeline" => "${PROJECT_NAME}-logstash"           # ✅ 환경변수 사용
       "processed_at" => "%{+yyyy.MM.dd HH:mm:ss}"
+      "data_source" => "${PROJECT_NAME}-siem"            # ✅ 환경변수 사용
+      "index_date" => "%{+yyyy.MM.dd}"
     }
   }
   
@@ -52,17 +45,12 @@ filter {
   #---------------------------------------------------------------------------
   # 2. 로그 타입별 파싱
   #---------------------------------------------------------------------------
-  
-  # DVWA 웹 로그 파싱
   if [log_type] == "web" or "web" in [tags] {
     grok {
-      match => { 
-        "message" => "%{COMBINEDAPACHELOG}"
-      }
+      match => { "message" => "%{COMBINEDAPACHELOG}" }
       add_tag => ["web_parsed"]
     }
     
-    # User-Agent 분석
     if [agent] {
       useragent {
         source => "agent"
@@ -70,32 +58,25 @@ filter {
       }
     }
     
-    # IP 지역 정보 (선택적)
     if [clientip] {
       mutate {
         add_field => { "source_ip" => "%{clientip}" }
+      }
     }
   }
-  
-  # 시스템 로그 파싱 (syslog)
   else if [log_type] == "system" or "system" in [tags] {
     grok {
-      match => { 
-        "message" => "%{SYSLOGLINE}"
-      }
+      match => { "message" => "%{SYSLOGLINE}" }
       add_tag => ["system_parsed"]
     }
   }
-  
-  # 보안 이벤트 로그
   else if [log_type] == "security" or "security" in [tags] {
-    # JSON 구조 그대로 사용
     mutate {
       add_tag => ["security_event"]
     }
     
     # 위험도 레벨 설정
-    if [event_type] == "sql_injection" or [event_type] == "xss" {
+    if [event_type] in ["sql_injection", "xss"] {
       mutate {
         add_field => { "risk_level" => "high" }
       }
@@ -111,27 +92,13 @@ filter {
   }
   
   #---------------------------------------------------------------------------
-  # 3. 공통 필드 추가
+  # 3. 최종 정제
   #---------------------------------------------------------------------------
-  
-  mutate {
-    # 인덱스 구분용
-    add_field => {
-      "index_date" => "%{+yyyy.MM.dd}"
-      "data_source" => "${PROJECT_NAME}-siem"
-    }
-  }
-  
-  #---------------------------------------------------------------------------
-  # 4. 데이터 정제
-  #---------------------------------------------------------------------------
-  
-  # 빈 필드 제거
   mutate {
     remove_field => ["host", "path", "[@metadata]"]
   }
   
-  # 에러 로그 태깅
+  # 파싱 상태 태깅
   if "_grokparsefailure" in [tags] {
     mutate {
       add_tag => ["parse_error"]
@@ -144,13 +111,33 @@ filter {
   }
 }
 
-  #---------------------------------------------------------------------------
-  # 개발용 출력 (테스트 시에만)
-  #---------------------------------------------------------------------------
+#==============================================================================
+# OUTPUT
+#==============================================================================
+output {
+  # OpenSearch로 메인 데이터 전송
+  opensearch {
+    hosts => ["https://${OPENSEARCH_HOST}"]
+    index => "${PROJECT_NAME}-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
+    
+    # 인증
+    user => "${OPENSEARCH_USERNAME}"                    # ✅ 환경변수 사용
+    password => "${OPENSEARCH_PASSWORD}"                # ✅ Secrets Manager
+    
+    # SSL 설정
+    ssl => true
+    ssl_certificate_verification => false
+    
+    # 에러 처리
+    retry_on_conflict => 3
+  }
   
-  # stdout {
-  #   codec => rubydebug {
-  #     metadata => false
-  #   }
-  # }
+  # 에러 로그만 CloudWatch로 백업
+  if "parse_error" in [tags] {
+    cloudwatch_logs {
+      log_group_name => "/aws/logstash/${PROJECT_NAME}-errors"  # ✅ 환경변수 사용
+      log_stream_name => "parse-errors-%{+yyyy-MM-dd}"
+      region => "${AWS_REGION}"
+    }
+  }
 }
