build: 오류 수정, pipeline: 중복되는 사항 수정

--- a/.github/workflows/logstash-build-push.yml
+++ b/.github/workflows/logstash-build-push.yml
@@ -6,7 +6,7 @@ on:
       - main
       - dev
     paths:
-      - "logstash/**"
+      - 'infra/dev/modules/logstash/**'
       - ".github/workflows/logstash-build-push.yml"
   workflow_dispatch: {}
 
