--- a/infra/dev/modules/logstash/config/logstash.config
+++ b/infra/dev/modules/logstash/config/logstash.config
@@ -7,16 +7,14 @@ input {
   kinesis {
     kinesis_stream_name => "${KINESIS_STREAM_NAME}"
     region => "${AWS_REGION}"
-    application_name => "${PROJECT_NAME}-logstash-consumer"  # ✅ 환경변수 사용
-    initial_position => "TRIM_HORIZON"
-    checkpoint_interval => 10
+    application_name => "${PROJECT_NAME}-logstash-consumer"
     metrics => "cloudwatch"
     
     codec => json {
       charset => "UTF-8"
     }
     
-    add_tag => ["kinesis", "${PROJECT_NAME}", "raw"]  # ✅ 환경변수 사용
+    tags => ["kinesis", "${PROJECT_NAME}", "raw"]  
   }
 }
 
@@ -25,12 +23,10 @@ filter {
   # 1. 기본 필드 정리
   #---------------------------------------------------------------------------
   mutate {
-    remove_field => ["@version"]
+    remove_field => ["@version", "host", "path", "[@metadata]"]
     add_field => {
-      "pipeline" => "${PROJECT_NAME}-logstash"           # ✅ 환경변수 사용
-      "processed_at" => "%{+yyyy.MM.dd HH:mm:ss}"
-      "data_source" => "${PROJECT_NAME}-siem"            # ✅ 환경변수 사용
-      "index_date" => "%{+yyyy.MM.dd}"
+      "pipeline" => "${PROJECT_NAME}-logstash"
+      "data_source" => "${PROJECT_NAME}-siem"
     }
   }
   
@@ -45,7 +41,7 @@ filter {
   #---------------------------------------------------------------------------
   # 2. 로그 타입별 파싱
   #---------------------------------------------------------------------------
-  if [log_type] == "web" or "web" in [tags] {
+  if "web" in [tags] or [log_type] == "web" {
     grok {
       match => { "message" => "%{COMBINEDAPACHELOG}" }
       add_tag => ["web_parsed"]
@@ -64,16 +60,20 @@ filter {
       }
     }
   }
-  else if [log_type] == "system" or "system" in [tags] {
+  
+  if "system" in [tags] or [log_type] == "system" {
     grok {
       match => { "message" => "%{SYSLOGLINE}" }
       add_tag => ["system_parsed"]
     }
   }
-  else if [log_type] == "security" or "security" in [tags] {
+  
+  if "security" in [tags] or [log_type] == "security" {
     mutate {
       add_tag => ["security_event"]
     }
+
+# if-else 구조로 되어있어서 확장성에 있어 순차 처리로 비효율적이라서 수정했어요
     
     # 위험도 레벨 설정
     if [event_type] in ["sql_injection", "xss"] {
@@ -94,9 +94,6 @@ filter {
   #---------------------------------------------------------------------------
   # 3. 최종 정제
   #---------------------------------------------------------------------------
-  mutate {
-    remove_field => ["host", "path", "[@metadata]"]
-  }
   
   # 파싱 상태 태깅
   if "_grokparsefailure" in [tags] {
@@ -116,7 +113,7 @@ filter {
 #==============================================================================
 output {
   # OpenSearch로 메인 데이터 전송
-  opensearch {
+  elasticsearch {
     hosts => ["https://${OPENSEARCH_HOST}"]
     index => "${PROJECT_NAME}-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
     
@@ -124,20 +121,27 @@ output {
     user => "${OPENSEARCH_USERNAME}"                    # ✅ 환경변수 사용
     password => "${OPENSEARCH_PASSWORD}"                # ✅ Secrets Manager
     
-    # SSL 설정
-    ssl => true
-    ssl_certificate_verification => false
+    # ✅ 개선 (환경별 보안)
+    ssl_verification_mode => "${SSL_VERIFY_MODE:none}"
     
     # 에러 처리
     retry_on_conflict => 3
   }
   
-  # 에러 로그만 CloudWatch로 백업
+  # 🔥 수정: CloudWatch 메트릭 설정으로 변경
   if "parse_error" in [tags] {
-    cloudwatch_logs {
-      log_group_name => "/aws/logstash/${PROJECT_NAME}-errors"  # ✅ 환경변수 사용
-      log_stream_name => "parse-errors-%{+yyyy-MM-dd}"
+    cloudwatch {
+      metricname => "ParseErrors"                    # log_group_name 대신
+      namespace => "SIEM/Logstash"                   # 네임스페이스
       region => "${AWS_REGION}"
+      unit => "Count"                                # 단위
+      value => "1"                                   # 값
+      
+      # 선택사항: 차원 추가
+      dimensions => { 
+        "Environment" => "Test"
+        "Project" => "${PROJECT_NAME}"
+      }
     }
   }
 }
