--- a/.github/workflows/logstash-build-push.yml
+++ b/.github/workflows/logstash-build-push.yml
@@ -6,7 +6,7 @@ on:
       - main
       - dev
     paths:
-      - 'infra/dev/modules/logstash/**'
+      - 'logstash/**'
       - ".github/workflows/logstash-build-push.yml"
   workflow_dispatch: {}
 
