--- a/logstash/config/logstash.yml
+++ b/logstash/config/logstash.yml
@@ -19,7 +19,7 @@ log.format: json
 
 # 성능 최적화 - ECS 메모리 제한 환경용
 dead_letter_queue.enable: false    # 디스크 I/O 제거로 성능 향상 
-# 메모리가 부족한 상황에서 실패한 데이터를 재처리하기에는 ECS Fargate 환경에서 재처리가 복잡하고 메모리 제한 등의 이슈로 그냥 디스크 공간 절약하는 방안으로 가기 -- 실패한 몇 로그가 중요하다면 제거하는게 나을 것 같은데 안정성 측면에서는 이게 나을 것 같음 
+# 메모리가 부족한 상황에서 실패한 데이터를 재처리하기에는 ECS    환경에서 재처리가 복잡하고 메모리 제한 등의 이슈로 그냥 디스크 공간 절약하는 방안으로 가기 -- 실패한 몇 로그가 중요하다면 제거하는게 나을 것 같은데 안정성 측면에서는 이게 나을 것 같음 
 monitoring.enabled: false          # 불필요한 네트워크 트래픽 제거 - 클라우드워치 쓰니까 
 
 # ECS 환경 최적화 - 안전한 종료 보장
