refactor: IAM 인증으로 수정

--- a/logstash/config/pipelines.yml
+++ b/logstash/config/pipelines.yml
@@ -18,4 +18,6 @@
   queue.max_bytes: 100mb                                        # ✅ 128 → 100 (안전 마진)
 
     # 🔥 추가 최적화 (파이프라인별만 적용)
-  pipeline.ordered: false           # 순서 < 성능 -- 어차피 timestamp에 맞춰서 정렬되는거라서 순서가 상관 없으니 동시 처리 시켜버리려고
+  pipeline.ordered: false           # 순서 < 성능
+  pipeline.output_workers: 1        # 출력 워커 전용
+  
