--- a/logstash/config/logstash.yml
+++ b/logstash/config/logstash.yml
@@ -6,23 +6,10 @@
 # Node identification - 서버 구분
 node.name: "${HOSTNAME:2sec-logstash-node}"
 
-# # 메모리 설정은 파이프라인이랑 충돌해서 지움 
-
-# API 설정 - 은 infra/dev/modules/ecs 파일로 다시 보니까 필요없어 보이는 것 같음
-
 # 로깅
 log.level: info # 우선 주요 일만 보고되게 
 log.format: json
 
 # 성능 최적화 - ECS 메모리 제한 환경용
-dead_letter_queue.enable: false    # 디스크 I/O 제거로 성능 향상 
-# 메모리가 부족한 상황에서 실패한 데이터를 재처리하기에는 ECS    환경에서 재처리가 복잡하고 메모리 제한 등의 이슈로 그냥 디스크 공간 절약하는 방안으로 가기 -- 실패한 몇 로그가 중요하다면 제거하는게 나을 것 같은데 안정성 측면에서는 이게 나을 것 같음 
-monitoring.enabled: false          # 불필요한 네트워크 트래픽 제거 - 클라우드워치 쓰니까 
-
-# ECS 환경 최적화 - 안전한 종료 보장
-pipeline.unsafe_shutdown: false # 처리 중인 데이터까지 오픈서치로 보내고 안전하게 종료할 수 있게 세팅
-
-# ECS 호환성 - v8 표준 준수
-pipeline.ecs_compatibility: v8 # 호환성 고려해서 고정해둠
-
-# 설정 리로드 - 원래 있던건 ecs 환경에서 어차피 새로운 컨테이너로 교체되는 방식이기에 불필요해서 제거
+dead_letter_queue.enable: false    # 디스크 I/O 제거로 성능 향상
+monitoring.enabled: false          # 불필요한 네트워크 트래픽 제거
