--- a/.github/workflows/terraform-dev-plan.yml
+++ b/.github/workflows/terraform-dev-plan.yml
@@ -1,13 +1,6 @@
 name: Terraform Plan (infra dev)
 
 on:
-  pull_request:
-    branches:
-      - main
-      - dev
-    paths:
-      - "infra/dev/**"
-      
   workflow_dispatch: {}
 
 permissions:
@@ -39,6 +32,13 @@ jobs:
 
       - name: Terraform Init
         run: terraform init -backend-config="env/dev.backend.hcl"
+
+      - name: Remove Service Linked Role from State (if exists)
+        run: |
+          # Service Linked Role은 Terraform으로 관리하지 않으므로 state에서 제거
+          # 실제 AWS 리소스는 삭제하지 않고 Terraform 관리에서만 제외
+          terraform state rm module.opensearch.aws_iam_service_linked_role.opensearch 2>/dev/null || true
+        continue-on-error: true
 
       - name: Terraform Format Check
         run: terraform fmt -check
