--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -22,6 +22,9 @@ filter {
     remove_field => ["@version", "host", "path", "port", "type"]
     add_field => {
       "pipeline" => "${PROJECT_NAME}-logstash"
+      "[event][kind]" => "event"
+      "[event][category]" => "web"
+      "[event][dataset]" => "web.access"
     }
   }
   
@@ -34,46 +37,156 @@ filter {
   }
   
   #---------------------------------------------------------------------------
-  # 2. 로그 타입별 파싱
+  # 2. 웹 로그 파싱 (Apache/Nginx Combined Log)
   #---------------------------------------------------------------------------
   if [log_type] == "web" {
     grok {
-      match => { "message" => "%{COMBINEDAPACHELOG}" }
+      match => { 
+        "message" => "%{IPORHOST:[source][ip]} %{USER:ident} %{USER:auth} \[%{HTTPDATE:timestamp}\] \"(?:%{WORD:[http][request][method]} %{NOTSPACE:[url][original]}(?: HTTP/%{NUMBER:[http][version]})?|%{DATA:rawrequest})\" %{NUMBER:[http][response][status_code]} (?:%{NUMBER:[http][response][body][bytes]}|-) \"(?:%{DATA:[http][request][referrer]}|-)\" \"(?:%{DATA:[user_agent][original]}|-)\""
+      }
       add_tag => ["web_parsed"]
     }
     
-    if [agent] {
+    # URL 파싱
+    if [url][original] {
+      ruby {
+        code => "
+          require 'uri'
+          url = event.get('[url][original]')
+          begin
+            uri = URI.parse(url)
+            event.set('[url][path]', uri.path)
+            event.set('[url][query]', uri.query) if uri.query
+          rescue => e
+            event.tag('url_parse_error')
+          end
+        "
+      }
+    }
+    
+    # User Agent 파싱
+    if [user_agent][original] {
       useragent {
-        source => "agent"
-        target => "user_agent"
+        source => "[user_agent][original]"
+        target => "[user_agent]"
+      }
+    }
+    
+    # GeoIP 분석
+    if [source][ip] {
+      geoip {
+        source => "[source][ip]"
+        target => "[source][geo]"
       }
     }
   }
   
-  if [log_type] == "system" {
-    grok {
-      match => { "message" => "%{SYSLOGLINE}" }
-      add_tag => ["system_parsed"]
-    }
+  
+  #---------------------------------------------------------------------------
+  # 3. 🎯 YAML 기반 공격 탐지 엔진 (영구 불변!)
+  #---------------------------------------------------------------------------
+  ruby {
+    init => "
+      # 패턴 매처 엔진 초기화 (한 번만 실행)
+      require_relative '/usr/share/logstash/config/patterns/pattern_matcher.rb'
+      
+      @pattern_matcher = AttackPatternMatcher.new(
+        '/usr/share/logstash/config/patterns/attack_patterns.yml',
+        '/usr/share/logstash/config/patterns/severity_mapping.yml'
+      )
+      
+      puts '[INFO] Attack detection engine initialized'
+    "
+    
+    code => "
+      # 메시지 및 컨텍스트 정보 추출
+      message = event.get('message').to_s
+      source_ip = event.get('[source][ip]')
+      
+      # 🚀 통합 공격 탐지 실행
+      detected_attacks = @pattern_matcher.detect_attacks(message, source_ip)
+      
+      if detected_attacks.empty?
+        #-----------------------------------------------------------------------
+        # 정상 트래픽 처리
+        #-----------------------------------------------------------------------
+        event.set('[event][type]', 'access')
+        event.set('[event][outcome]', 'success')
+        event.set('severity', 'info')
+        event.tag('normal')
+        
+      else
+        #-----------------------------------------------------------------------  
+        # 공격 탐지 처리
+        #-----------------------------------------------------------------------
+        event.set('[event][type]', 'attack')
+        event.set('[event][outcome]', 'unknown')
+        
+        # 가장 심각한 공격 정보를 메인으로 설정
+        primary_attack = detected_attacks.first
+        event.set('severity', primary_attack['severity'])
+        event.set('[attack][category]', primary_attack['category'])
+        event.set('[attack][technique]', primary_attack['technique'])
+        event.set('[attack][confidence]', primary_attack['confidence'])
+        
+        # 다중 공격 탐지 시 추가 정보 저장
+        if detected_attacks.size > 1
+          event.set('[attack][multiple_detected]', true)
+          event.set('[attack][count]', detected_attacks.size)
+          
+          # 모든 공격 정보를 배열로 저장
+          all_attacks = detected_attacks.map do |attack|
+            {
+              'category' => attack['category'],
+              'technique' => attack['technique'], 
+              'severity' => attack['severity'],
+              'confidence' => attack['confidence']
+            }
+          end
+          event.set('[attack][all_detected]', all_attacks)
+          
+          # 공격 카테고리 목록 (집계용)
+          categories = detected_attacks.map { |a| a['category'] }.uniq
+          event.set('[attack][categories]', categories)
+        end
+        
+        event.tag('attack')
+      end
+    "
   }
   
-  if [log_type] == "security" {
-    mutate { add_tag => ["security_event"] }
-
-# if-else 구조로 되어있어서 확장성에 있어 순차 처리로 비효율적이라서 수정했어요
-    
-    # 위험도 레벨 설정
-    if [event_type] in ["sql_injection", "xss"] {
-      mutate { add_field => { "risk_level" => "high" } }
-    } else if [event_type] == "brute_force" {
-      mutate { add_field => { "risk_level" => "medium" } }
-    } else {
-      mutate { add_field => { "risk_level" => "low" } }
+  #---------------------------------------------------------------------------
+  # 4. HTTP 응답 코드 기반 결과 판단
+  #---------------------------------------------------------------------------
+  if [http][response][status_code] {
+    ruby {
+      code => "
+        status_code = event.get('[http][response][status_code]').to_i
+        has_attack_tag = event.get('tags').include?('attack')
+        
+        if has_attack_tag
+          # 공격 시도가 탐지된 경우
+          if status_code >= 200 && status_code < 300
+            event.set('[event][outcome]', 'success')      # 공격 성공 (위험!)
+            event.set('[attack][executed]', true)
+          else
+            event.set('[event][outcome]', 'failure')      # 공격 차단됨 (안전)
+            event.set('[attack][executed]', false)
+          end
+        else
+          # 정상 트래픽
+          if status_code >= 200 && status_code < 400
+            event.set('[event][outcome]', 'success')      # 정상 성공
+          else
+            event.set('[event][outcome]', 'failure')      # 정상 에러
+          end
+        end
+      "
     }
   }
   
   #---------------------------------------------------------------------------
-  # 3. 최종 정제
+  # 5. 최종 정제
   #---------------------------------------------------------------------------
   
   # 파싱 상태 태깅
@@ -84,8 +197,12 @@ filter {
     }
   } else {
     mutate {
-      add_field => { "parse_status" => "success" }
-    }
+      add_field => { "parse_status" => "success" }}
+  }
+
+    # 불필요한 필드 제거
+  mutate {
+    remove_field => ["ident", "auth", "rawrequest"]
   }
 }
 
@@ -99,10 +216,10 @@ output {
     index => "${PROJECT_NAME}-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
     
     # IAM으로 변경
-    auth_type => {
-      type => 'aws_iam'
-      region => "${AWS_REGION}"
-    }
+#    auth_type => {
+#      type => 'aws_iam' 
+#      region => "${AWS_REGION}"
+#    }
     
     ecs_compatibility => disabled
     
