--- a/logstash/config/pipelines.yml
+++ b/logstash/config/pipelines.yml
@@ -19,5 +19,5 @@
 
     # 🔥 추가 최적화 (파이프라인별만 적용)
   pipeline.ordered: false           # 순서 < 성능
-  pipeline.output_workers: 1        # 출력 워커 전용
+  # pipeline.output_workers: 1        # 출력 워커 전용
   
