--- a/.github/workflows/logstash-build-push.yml
+++ b/.github/workflows/logstash-build-push.yml
@@ -73,11 +73,11 @@ jobs:
 
       # 선택 사항: ECS Fargate(Logstash) 서비스 롤링 배포까지 같이 하고 싶을 때 사용
       # 인프라가 준비된 후 ECS_CLUSTER / ECS_SERVICE 값을 실제 값으로 수정하세요.
-      # - name: Trigger ECS rolling deployment
-      #   run: |
-      #     aws ecs update-service \
-      #       --cluster "2SeC-dev-ecs-cluster" \
-      #       --service "2SeC-dev-logstash" \
-      #       --force-new-deployment
+      - name: Trigger ECS rolling deployment
+        run: |
+          aws ecs update-service \
+            --cluster "2SeC-dev-ecs-cluster" \
+            --service "2SeC-dev-logstash" \
+            --force-new-deployment
 
 
