fix: config 파일 절대 경로로 변경

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -87,74 +87,118 @@ filter {
   #---------------------------------------------------------------------------
   ruby {
     init => "
-      # 패턴 매처 엔진 초기화 (한 번만 실행)
-      require_relative '/usr/share/logstash/config/patterns/pattern_matcher.rb'
-      
-      @pattern_matcher = AttackPatternMatcher.new(
-        '/usr/share/logstash/config/patterns/attack_patterns.yml',
-        '/usr/share/logstash/config/patterns/severity_mapping.yml'
-      )
-      
-      puts '[INFO] Attack detection engine initialized'
+      begin
+        # ✅ 절대 경로 사용 (require_relative 대신)
+        require '/usr/share/logstash/config/patterns/pattern_matcher.rb'
+        
+        # ✅ 파일 존재 확인
+        pattern_file = '/usr/share/logstash/config/patterns/attack_patterns.yml'
+        severity_file = '/usr/share/logstash/config/patterns/severity_mapping.yml'
+        
+        unless File.exist?(pattern_file)
+          puts '[ERROR] Attack patterns file not found: #{pattern_file}'
+          @pattern_matcher = nil
+        else
+          unless File.exist?(severity_file)
+            puts '[ERROR] Severity mapping file not found: #{severity_file}'
+            @pattern_matcher = nil
+          else
+            # ✅ 안전한 초기화
+            @pattern_matcher = AttackPatternMatcher.new(pattern_file, severity_file)
+            puts '[INFO] Attack detection engine initialized successfully'
+          end
+        end
+        
+      rescue LoadError => e
+        puts '[ERROR] Failed to load pattern matcher: #{e.message}'
+        @pattern_matcher = nil
+      rescue => e
+        puts '[ERROR] Attack detection engine initialization failed: #{e.message}'
+        @pattern_matcher = nil
+      end
     "
     
     code => "
-      # 메시지 및 컨텍스트 정보 추출
-      message = event.get('message').to_s
-      source_ip = event.get('[source][ip]')
-      
-      # 🚀 통합 공격 탐지 실행
-      detected_attacks = @pattern_matcher.detect_attacks(message, source_ip)
-      
-      if detected_attacks.empty?
-        #-----------------------------------------------------------------------
-        # 정상 트래픽 처리
-        #-----------------------------------------------------------------------
-        event.set('[event][type]', 'access')
-        event.set('[event][outcome]', 'success')
-        event.set('severity', 'info')
-        event.tag('normal')
+      begin
+        # 메시지 및 컨텍스트 정보 추출
+        message = event.get('message').to_s
+        source_ip = event.get('[source][ip]')
         
-      else
-        #-----------------------------------------------------------------------  
-        # 공격 탐지 처리
-        #-----------------------------------------------------------------------
-        event.set('[event][type]', 'attack')
-        event.set('[event][outcome]', 'unknown')
-        
-        # 가장 심각한 공격 정보를 메인으로 설정
-        primary_attack = detected_attacks.first
-        event.set('severity', primary_attack['severity'])
-        event.set('[attack][category]', primary_attack['category'])
-        event.set('[attack][technique]', primary_attack['technique'])
-        event.set('[attack][confidence]', primary_attack['confidence'])
-        
-        # 다중 공격 탐지 시 추가 정보 저장
-        if detected_attacks.size > 1
-          event.set('[attack][multiple_detected]', true)
-          event.set('[attack][count]', detected_attacks.size)
+        # ✅ 엔진 상태 확인
+        if @pattern_matcher.nil?
+          # 엔진 초기화 실패 시 기본 처리
+          event.set('[event][type]', 'access')
+          event.set('[event][outcome]', 'success')
+          event.set('severity', 'info')
+          event.set('[engine][status]', 'disabled')
+          event.set('[engine][reason]', 'initialization_failed')
+          event.tag('normal', 'engine_disabled')
+        else
+          # 🚀 정상 공격 탐지 실행
+          detected_attacks = @pattern_matcher.detect_attacks(message, source_ip)
           
-          # 모든 공격 정보를 배열로 저장
-          all_attacks = detected_attacks.map do |attack|
-            {
-              'category' => attack['category'],
-              'technique' => attack['technique'], 
-              'severity' => attack['severity'],
-              'confidence' => attack['confidence']
-            }
+          if detected_attacks.empty?
+            #-----------------------------------------------------------------------
+            # 정상 트래픽 처리
+            #-----------------------------------------------------------------------
+            event.set('[event][type]', 'access')
+            event.set('[event][outcome]', 'success')
+            event.set('severity', 'info')
+            event.set('[engine][status]', 'active')
+            event.tag('normal')
+            
+          else
+            #-----------------------------------------------------------------------  
+            # 공격 탐지 처리
+            #-----------------------------------------------------------------------
+            event.set('[event][type]', 'attack')
+            event.set('[event][outcome]', 'unknown')
+            event.set('[engine][status]', 'active')
+            
+            # 가장 심각한 공격 정보를 메인으로 설정
+            primary_attack = detected_attacks.first
+            event.set('severity', primary_attack['severity'])
+            event.set('[attack][category]', primary_attack['category'])
+            event.set('[attack][technique]', primary_attack['technique'])
+            event.set('[attack][confidence]', primary_attack['confidence'])
+            
+            # 다중 공격 탐지 시 추가 정보 저장
+            if detected_attacks.size > 1
+              event.set('[attack][multiple_detected]', true)
+              event.set('[attack][count]', detected_attacks.size)
+              
+              # 모든 공격 정보를 배열로 저장
+              all_attacks = detected_attacks.map do |attack|
+                {
+                  'category' => attack['category'],
+                  'technique' => attack['technique'], 
+                  'severity' => attack['severity'],
+                  'confidence' => attack['confidence']
+                }
+              end
+              event.set('[attack][all_detected]', all_attacks)
+              
+              # 공격 카테고리 목록 (집계용)
+              categories = detected_attacks.map { |a| a['category'] }.uniq
+              event.set('[attack][categories]', categories)
+            end
+            
+            event.tag('attack')
           end
-          event.set('[attack][all_detected]', all_attacks)
-          
-          # 공격 카테고리 목록 (집계용)
-          categories = detected_attacks.map { |a| a['category'] }.uniq
-          event.set('[attack][categories]', categories)
         end
         
-        event.tag('attack')
+      rescue => e
+        # ✅ 런타임 에러 처리
+        puts '[ERROR] Attack detection runtime error: #{e.message}'
+        event.set('[event][type]', 'access')
+        event.set('[event][outcome]', 'success') 
+        event.set('severity', 'info')
+        event.set('[engine][status]', 'error')
+        event.set('[engine][error]', e.message)
+        event.tag('normal', 'engine_error')
       end
     "
   }
-  
   #---------------------------------------------------------------------------
   # 4. HTTP 응답 코드 기반 결과 판단
   #---------------------------------------------------------------------------
