fix: opensearch 엔드포인트 포트 지정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -256,7 +256,7 @@ filter {
 output {
   # OpenSearch로 메인 데이터 전송
   elasticsearch {
-    hosts => ["https://${OPENSEARCH_HOST}"]
+    hosts => ["https://${OPENSEARCH_HOST}:443"]
     index => "${PROJECT_NAME}-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
     
     # IAM으로 변경
