--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -260,10 +260,10 @@ output {
     index => "${PROJECT_NAME}-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
     
     # IAM으로 변경
-#    auth_type => {
-#      type => 'aws_iam' 
-#      region => "${AWS_REGION}"
-#    }
+    auth_type => {
+      type => 'aws_iam' 
+      region => "${AWS_REGION}"
+    }
     
     ecs_compatibility => disabled
     
