fix: 모듈 이름 수정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -255,7 +255,7 @@ filter {
 #==============================================================================
 output {
   # OpenSearch로 메인 데이터 전송
-  elasticsearch {
+  opensearch {
     hosts => ["https://${OPENSEARCH_HOST}:443"]
     index => "${PROJECT_NAME}-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
     
