fix: codec => plain

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -9,12 +9,46 @@ input {
     region => "${AWS_REGION}"
     application_name => "${PROJECT_NAME}-logstash-consumer"
     
-    codec => json
+    codec => plain
     tags => ["kinesis", "raw"]  
   }
 }
 
 filter {
+#---------------------------------------------------------------------------
+  # 0. GZIP 압축 해제 및 JSON 파싱 (새로 추가!)
+#---------------------------------------------------------------------------
+  # 안전한 GZIP + JSON 처리
+    if [message] and [message] != "" {
+    ruby {
+      code => '
+        message = event.get("message")
+        if message.is_a?(String) && message.length >= 2 && 
+           message.bytes[0] == 0x1F && message.bytes[1] == 0x8B
+          
+          require "zlib"
+          require "stringio"
+          
+          begin
+            decompressed = Zlib::GzipReader.new(StringIO.new(message)).read
+            event.set("message", decompressed)
+            event.set("[@metadata][was_compressed]", true)
+          rescue => e
+            event.set("[@metadata][decompress_error]", e.message)
+            event.tag("decompress_failed")
+          end
+        end
+      '
+    }
+  }
+
+  
+  # 내장 JSON 파서 사용 (더 안전하고 빠름)
+  json {
+    source => "message"
+    skip_on_invalid_json => true
+  }
+
   #---------------------------------------------------------------------------
   # 1. 기본 필드 정리
   #---------------------------------------------------------------------------
