fix: Binary Data 처리 방식 추가

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -9,7 +9,9 @@ input {
     region => "${AWS_REGION}"
     application_name => "${PROJECT_NAME}-logstash-consumer"
     
-    codec => plain
+    codec => plain {
+      charset => "ISO-8859-1" # Bin. D를 안전하게 처리
+    }
     tags => ["kinesis", "raw"]  
   }
 }
@@ -47,6 +49,13 @@ filter {
   json {
     source => "message"
     skip_on_invalid_json => true
+  }
+
+    # JSON 파싱 실패 시 태그 추가
+  if "_jsonparsefailure" in [tags] {
+    mutate {
+      add_tag => ["json_parse_error"] 
+    }
   }
 
   #---------------------------------------------------------------------------
@@ -123,7 +132,7 @@ filter {
     init => "
       begin
         # ✅ 절대 경로 사용 (require_relative 대신)
-        require '/usr/share/logstash/config/patterns/pattern_matcher.rb'
+        require '/usr/share/logstash/config/patterns/patterns_matcher.rb'
         
         # ✅ 파일 존재 확인
         pattern_file = '/usr/share/logstash/config/patterns/attack_patterns.yml'
