fix: 에러 코드 기반 수정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -21,41 +21,40 @@ filter {
   # 0. GZIP 압축 해제 및 JSON 파싱 (새로 추가!)
 #---------------------------------------------------------------------------
   # 안전한 GZIP + JSON 처리
-    if [message] and [message] != "" {
     ruby {
       code => '
-        message = event.get("message")
-        if message.is_a?(String) && message.length >= 2 && 
-           message.bytes[0] == 0x1F && message.bytes[1] == 0x8B
+        begin
+          message = event.get("message")
           
-          require "zlib"
-          require "stringio"
-          
-          begin
-            decompressed = Zlib::GzipReader.new(StringIO.new(message)).read
-            event.set("message", decompressed)
-            event.set("[@metadata][was_compressed]", true)
-          rescue => e
-            event.set("[@metadata][decompress_error]", e.message)
-            event.tag("decompress_failed")
+          if !message.nil? && message.is_a?(String) && message.length >= 2
+            # GZIP 매직넘버 체크 (0x1F, 0x8B)
+            if message.bytes[0] == 0x1F && message.bytes[1] == 0x8B
+              require "zlib"
+              require "stringio"
+              
+              begin
+                decompressed = Zlib::GzipReader.new(StringIO.new(message)).read
+                event.set("message", decompressed)
+                event.set("[@metadata][was_gzipped]", true)
+              rescue => e
+                event.set("[@metadata][gzip_error]", e.message)
+                event.tag("gzip_decode_failed")
+              end
+            end
           end
+        rescue => e
+          event.set("[@metadata][ruby_error]", e.message)
+          event.tag("ruby_error")
         end
       '
     }
-  }
 
   
   # 내장 JSON 파서 사용 (더 안전하고 빠름)
   json {
     source => "message"
     skip_on_invalid_json => true
-  }
-
-    # JSON 파싱 실패 시 태그 추가
-  if "_jsonparsefailure" in [tags] {
-    mutate {
-      add_tag => ["json_parse_error"] 
-    }
+    ecs_compatibility => disabled  # JSON 필터 ECS 설정
   }
 
   #---------------------------------------------------------------------------
@@ -88,6 +87,7 @@ filter {
         "message" => "%{IPORHOST:[source][ip]} %{USER:ident} %{USER:auth} \[%{HTTPDATE:timestamp}\] \"(?:%{WORD:[http][request][method]} %{NOTSPACE:[url][original]}(?: HTTP/%{NUMBER:[http][version]})?|%{DATA:rawrequest})\" %{NUMBER:[http][response][status_code]} (?:%{NUMBER:[http][response][body][bytes]}|-) \"(?:%{DATA:[http][request][referrer]}|-)\" \"(?:%{DATA:[user_agent][original]}|-)\""
       }
       add_tag => ["web_parsed"]
+      ecs_compatibility => disabled  # Grok 필터 ECS 설정
     }
     
     # URL 파싱
@@ -112,6 +112,7 @@ filter {
       useragent {
         source => "[user_agent][original]"
         target => "[user_agent]"
+        ecs_compatibility => disabled  # UserAgent 필터 ECS 설정
       }
     }
     
@@ -120,6 +121,7 @@ filter {
       geoip {
         source => "[source][ip]"
         target => "[source][geo]"
+        ecs_compatibility => disabled  # GeoIP 필터 ECS 설정  
       }
     }
   }
@@ -132,11 +134,11 @@ filter {
     init => "
       begin
         # ✅ 절대 경로 사용 (require_relative 대신)
-        require '/usr/share/logstash/config/patterns/patterns_matcher.rb'
+        require '/usr/share/logstash/patterns/patterns_matcher.rb'
         
         # ✅ 파일 존재 확인
-        pattern_file = '/usr/share/logstash/config/patterns/attack_patterns.yml'
-        severity_file = '/usr/share/logstash/config/patterns/severity_mapping.yml'
+        pattern_file = '/usr/share/logstash/patterns/attack_patterns.yml'
+        severity_file = '/usr/share/logstash/patterns/severity_mapping.yml'
         
         unless File.exist?(pattern_file)
           puts '[ERROR] Attack patterns file not found: #{pattern_file}'
@@ -175,7 +177,8 @@ filter {
           event.set('severity', 'info')
           event.set('[engine][status]', 'disabled')
           event.set('[engine][reason]', 'initialization_failed')
-          event.tag('normal', 'engine_disabled')
+          event.tag('normal') 
+          event.tag('engine_disabled')
         else
           # 🚀 정상 공격 탐지 실행
           detected_attacks = @pattern_matcher.detect_attacks(message, source_ip)
@@ -238,7 +241,8 @@ filter {
         event.set('severity', 'info')
         event.set('[engine][status]', 'error')
         event.set('[engine][error]', e.message)
-        event.tag('normal', 'engine_error')
+        event.tag('normal' ) 
+        event.tag ('engine_error')
       end
     "
   }
@@ -310,6 +314,10 @@ output {
     
     ecs_compatibility => disabled
     
+    # 템플릿 관리 비활성화 (에러 8번 해결)
+    manage_template => false
+    template => ""
+
     retry_on_conflict => 3
   }
   
