--- a/logstash/config/pipelines.yml
+++ b/logstash/config/pipelines.yml
@@ -20,4 +20,8 @@
   # 🔥 추가 최적화 (파이프라인별만 적용)
   pipeline.ordered: false           # 순서 < 성능
   # pipeline.output_workers: 1        # 출력 워커 전용
+
+  # ECS 호환성 명시적 설정 (에러 1-6, 10-11, 15번 해결)
+  pipeline.ecs_compatibility: disabled
+
   
