fix: ruby 문자열 보간, check_configurations_and_update_timer 추가

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -141,24 +141,24 @@ filter {
         severity_file = '/usr/share/logstash/patterns/severity_mapping.yml'
         
         unless File.exist?(pattern_file)
-          puts '[ERROR] Attack patterns file not found: #{pattern_file}'
+          puts "[ERROR] Attack patterns file not found: #{pattern_file}"
           @pattern_matcher = nil
         else
           unless File.exist?(severity_file)
-            puts '[ERROR] Severity mapping file not found: #{severity_file}'
+            puts "[ERROR] Severity mapping file not found: #{severity_file}"
             @pattern_matcher = nil
           else
             # ✅ 안전한 초기화
             @pattern_matcher = AttackPatternMatcher.new(pattern_file, severity_file)
-            puts '[INFO] Attack detection engine initialized successfully'
+            puts "[INFO] Attack detection engine initialized successfully"
           end
         end
         
       rescue LoadError => e
-        puts '[ERROR] Failed to load pattern matcher: #{e.message}'
+        puts "[ERROR] Failed to load pattern matcher: #{e.message}"
         @pattern_matcher = nil
       rescue => e
-        puts '[ERROR] Attack detection engine initialization failed: #{e.message}'
+        puts "[ERROR] Attack detection engine initialization failed: #{e.message}"
         @pattern_matcher = nil
       end
     "
@@ -235,7 +235,7 @@ filter {
         
       rescue => e
         # ✅ 런타임 에러 처리
-        puts '[ERROR] Attack detection runtime error: #{e.message}'
+        puts "[ERROR] Attack detection runtime error: #{e.message}"
         event.set('[event][type]', 'access')
         event.set('[event][outcome]', 'success') 
         event.set('severity', 'info')
@@ -243,6 +243,7 @@ filter {
         event.set('[engine][error]', e.message)
         event.tag('normal' ) 
         event.tag ('engine_error')
+        event.cancel
       end
     "
   }
@@ -304,7 +305,7 @@ output {
   # OpenSearch로 메인 데이터 전송
   opensearch {
     hosts => ["https://${OPENSEARCH_HOST}:443"]
-    index => "${PROJECT_NAME}-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
+    index => "2sec-siem-%{+yyyy.MM.dd}"     # ✅ 환경변수 사용
     
     # IAM으로 변경
     auth_type => {
