fix: ruby 파일 따옴표 수정, fallback 추가

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -22,31 +22,31 @@ filter {
 #---------------------------------------------------------------------------
   # 안전한 GZIP + JSON 처리
     ruby {
-      code => '
+      code => "
         begin
-          message = event.get("message")
+          message = event.get('message')
           
           if !message.nil? && message.is_a?(String) && message.length >= 2
             # GZIP 매직넘버 체크 (0x1F, 0x8B)
             if message.bytes[0] == 0x1F && message.bytes[1] == 0x8B
-              require "zlib"
-              require "stringio"
+              require 'zlib'
+              require 'stringio'
               
               begin
                 decompressed = Zlib::GzipReader.new(StringIO.new(message)).read
-                event.set("message", decompressed)
-                event.set("[@metadata][was_gzipped]", true)
+                event.set('message', decompressed)
+                event.set('[@metadata][was_gzipped]', true)
               rescue => e
-                event.set("[@metadata][gzip_error]", e.message)
-                event.tag("gzip_decode_failed")
+                event.set('[@metadata][gzip_error]', e.message)
+                event.tag('gzip_decode_failed')
               end
             end
           end
         rescue => e
-          event.set("[@metadata][ruby_error]", e.message)
-          event.tag("ruby_error")
+          event.set('[@metadata][ruby_error]', e.message)
+          event.tag('ruby_error')
         end
-      '
+      "
     }
 
   
@@ -81,7 +81,7 @@ filter {
   #---------------------------------------------------------------------------
   # 2. 웹 로그 파싱 (Apache/Nginx Combined Log)
   #---------------------------------------------------------------------------
-  if [log_type] == "web" {
+  if ![log_type] or [log_type] == "web" {
     grok {
       match => { 
         "message" => "%{IPORHOST:[source][ip]} %{USER:ident} %{USER:auth} \[%{HTTPDATE:timestamp}\] \"(?:%{WORD:[http][request][method]} %{NOTSPACE:[url][original]}(?: HTTP/%{NUMBER:[http][version]})?|%{DATA:rawrequest})\" %{NUMBER:[http][response][status_code]} (?:%{NUMBER:[http][response][body][bytes]}|-) \"(?:%{DATA:[http][request][referrer]}|-)\" \"(?:%{DATA:[user_agent][original]}|-)\""
@@ -243,7 +243,6 @@ filter {
         event.set('[engine][error]', e.message)
         event.tag('normal' ) 
         event.tag ('engine_error')
-        event.cancel
       end
     "
   }
@@ -254,7 +253,8 @@ filter {
     ruby {
       code => "
         status_code = event.get('[http][response][status_code]').to_i
-        has_attack_tag = event.get('tags').include?('attack')
+        tags = event.get('tags') || []
+        has_attack_tag = tags.include?('attack')
         
         if has_attack_tag
           # 공격 시도가 탐지된 경우
