fix: ruby 따옴표 문제 수정

--- a/logstash/config/logstash.config
+++ b/logstash/config/logstash.config
@@ -141,24 +141,24 @@ filter {
         severity_file = '/usr/share/logstash/patterns/severity_mapping.yml'
         
         unless File.exist?(pattern_file)
-          puts "[ERROR] Attack patterns file not found: #{pattern_file}"
+          puts '[ERROR] Attack patterns file not found: #{pattern_file}'
           @pattern_matcher = nil
         else
           unless File.exist?(severity_file)
-            puts "[ERROR] Severity mapping file not found: #{severity_file}"
+            puts '[ERROR] Severity mapping file not found: #{severity_file}'
             @pattern_matcher = nil
           else
             # ✅ 안전한 초기화
             @pattern_matcher = AttackPatternMatcher.new(pattern_file, severity_file)
-            puts "[INFO] Attack detection engine initialized successfully"
+            puts '[INFO] Attack detection engine initialized successfully'
           end
         end
         
       rescue LoadError => e
-        puts "[ERROR] Failed to load pattern matcher: #{e.message}"
+        puts '[ERROR] Failed to load pattern matcher: #{e.message}'
         @pattern_matcher = nil
       rescue => e
-        puts "[ERROR] Attack detection engine initialization failed: #{e.message}"
+        puts '[ERROR] Attack detection engine initialization failed: #{e.message}'
         @pattern_matcher = nil
       end
     "
@@ -235,7 +235,7 @@ filter {
         
       rescue => e
         # ✅ 런타임 에러 처리
-        puts "[ERROR] Attack detection runtime error: #{e.message}"
+        puts '[ERROR] Attack detection runtime error'
         event.set('[event][type]', 'access')
         event.set('[event][outcome]', 'success') 
         event.set('severity', 'info')
